--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>dispatcher</module>
         <module>common-rabitmq</module>
+        <module>node</module>
     </modules>
 
     <properties>
