--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=amigoscode
+spring.datasource.password=password
+spring.jpa.generate-ddl=true
