--- a/node/pom.xml
+++ b/node/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>common-rabitmq</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>ru.zulvit</groupId>
+            <artifactId>common-jpa</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
