--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>dispatcher</module>
         <module>common-rabitmq</module>
         <module>node</module>
+        <module>common-jpa</module>
     </modules>
 
     <properties>
