--- a/node/pom.xml
+++ b/node/pom.xml
@@ -55,6 +55,18 @@
 
 
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>ru.zulvit</groupId>
             <artifactId>common-rabitmq</artifactId>
             <version>1.0-SNAPSHOT</version>
