--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common-rabitmq</module>
         <module>node</module>
         <module>common-jpa</module>
+        <module>mail-service</module>
     </modules>
 
     <properties>
